   -- Fixed NameRegions() in the fractal set-up (in the kingdoms game).
   -- Added a gamedef ADVANCED_FORTS which implements the fort modification
      to attack chance idea. See gamdefs.h for details. Nothing done about
      routing or any other suggestions connected to forts yet.
   -- Added some gamedefs that allow incremental calculation of tax income rather
      than getting all-or-nothing. TAX_INCOME has been replaced by TAX_BASE_INCOME,
      and there's TAX_BONUS_WEAPON for weapons, TAX_BONUS_ARMOR and TAX_BONUS_FORT.
      The weapons usable by TAX_WEAPON_BONUS are determined by the setting of
      the WHO_CAN_TAX gamedef. Note that only units that are basically able to
      tax will receive ANY silver. *Still need to update genrules.cpp to reflect
      this in detail!*
   -- Put the tax-relevant gamedefs into one place.
   
   -- Lots of stuff that people haven't documented here (including me) ...
   
   -- Fixed bug in market creation where disabled trade goods would leave blank spots
   -- Fixed bug in world creation where disabled races would still be used
   -- Added an updated version of the world editing code
   -- Economy-Rehaul:
   -- Wages are now fractional with one decimal point, and IMPORTANTLY(!!)
      are stored as actual wages * 10 (int value). Concomitantly, productivity in Production
      had to be raised by a factor of ten, too, so that silver production works as usual.
   -- Wages now depend on development per default. TownType is determined not only
      by town population but also by it's development.
   -- TOWN_DEVELOPMENT gamedef now controls the town type for towns at creation time
      as well as their relative development level.
   -- New AddTown() functions to provide a name or town type at start. Changed the functions to
      create StartingCities to reflect the changes in the town economy code.
   -- [NOTE:] still to do: effective PostTurn adjustment of development, habitat for long-term growth
      
   
   