@@ -884,6 +884,9 @@ Changes from 4.0.10 -> 5.0.0
       as well as their relative development level.
    -- New AddTown() functions to provide a name or town type at start. Changed the functions to
       create StartingCities to reflect the changes in the town economy code.
+   -- increased overall population by 5. Wages etc are now produced per 5 inhabitants. This is
+      largely cosmetic until DYNAMIC_POPULATION is implemented - then there will be direct
+      interaction between recruiting, disbanding and population.
    -- [NOTE:] still to do: effective PostTurn adjustment of development, habitat for long-term growth
       
    
